Navigation flickering issues fixed

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,11 +3,14 @@ body{
     font-weight: 300;
     font-style: normal;
 }
-
 .custom-navbar {
-	box-shadow: 10px 10px 10px #eee;
+	box-shadow: 1px 1px 1px #eee;
 	z-index: ;
 	background-color: #fff;
+}
+
+.navbar, .navbar-brand{
+    padding: 0px !important;
 }
 
 .nav-link {
@@ -33,10 +36,6 @@ body{
 
 .navbar-toggler-icon:hover {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-
-#logo_custom {
-	margin-top: -6px;
 }
 
 @media only screen and (max-width: 760px) {
@@ -95,4 +94,12 @@ body{
 
 .table td, .table th {
    text-align: center;
+}
+
+.navbar-expand-md .navbar-nav .dropdown-menu {
+        background: black;
+}
+
+.navbar-collapse {
+    padding-right: 15px;
 }
